--- a/templates/client.tmpl
+++ b/templates/client.tmpl
@@ -234,3 +234,19 @@ func (c *Client) applyEditors(ctx context.Context, req *http.Request, additional
     }
     return nil
 }
+
+// HTTPError is an error returned by a failed API call
+type HTTPError struct {
+	StatusCode int
+	RequestURL *url.URL
+	Message    string
+}
+
+func (err HTTPError) Error() string {
+	if msgs := strings.SplitN(err.Message, "\n", 2); len(msgs) > 1 {
+		return fmt.Sprintf("HTTP %d: %s (%s)\n%s", err.StatusCode, msgs[0], err.RequestURL, msgs[1])
+	} else if err.Message != "" {
+		return fmt.Sprintf("HTTP %d: %s (%s)", err.StatusCode, err.Message, err.RequestURL)
+	}
+	return fmt.Sprintf("HTTP %d (%s)", err.StatusCode, err.RequestURL)
+}
