--- a/templates/client-with-responses.tmpl
+++ b/templates/client-with-responses.tmpl
@@ -116,6 +116,9 @@ func (c *Client) {{$opid}}{{if .HasBody}}WithBody{{end}}(ctx context.Context{{ge
         return nil, err
     }
     req = req.WithContext(ctx)
+    if err := c.applyEditors(ctx, req, c.RequestEditors); err != nil {
+        return nil, err
+    }
     ogrsp, err := c.Client.Do(req)
     if err != nil {
         return nil, err
@@ -155,7 +158,7 @@ func (c *Client) {{$opid}}{{.Suffix}}(ctx context.Context{{genParamArgs $pathPar
         return nil, err
     }
     req = req.WithContext(ctx)
-    if err := c.applyEditors(ctx, req, reqEditors); err != nil {
+    if err := c.applyEditors(ctx, req, c.RequestEditors); err != nil {
         return nil, err
     }
     ogrsp, err := c.Client.Do(req)
