--- a/cmd/tmpl/client-example.tmpl
+++ b/cmd/tmpl/client-example.tmpl
@@ -4,15 +4,31 @@ func ExampleNewClient() {
     if err != nil {
         panic(err)
     }
+
+    // Call the client's methods.
+    resp, err := client.Meta.Ping()
+    if err != nil {
+        panic(err)
+    }
+
+    fmt.Println(resp)
 }
 
 // - OR -
 
 // Create a new client with your token parsed from the environment
 // variable: `{{.EnvVariable}}`.
-func ExampleNewClient() {
+func ExampleNewClientFromEnv() {
     client, err := {{.PackageName}}.NewClientFromEnv("your apps user agent")
     if err != nil {
         panic(err)
     }
+
+    // Call the client's methods.
+    resp, err := client.Meta.Ping()
+    if err != nil {
+        panic(err)
+    }
+
+    fmt.Println(resp)
 }
