--- a/cmd/tmpl/struct.tmpl
+++ b/cmd/tmpl/struct.tmpl
@@ -2,6 +2,6 @@
 type {{.Name}} struct {
     {{range .Values -}}
         // {{.Name}}: {{.Description}}
-        {{.Name}} {{.Type}} `json:"{{.Property}}" yaml:"{{.Property}}"`
+        {{.Name}} {{.Type}} `json:"{{.Property}}" yaml:"{{.Property}}" schema:"{{.Property}}"`
     {{end -}}
 }
