--- a/cmd/tmpl/path.tmpl
+++ b/cmd/tmpl/path.tmpl
@@ -14,11 +14,14 @@ func (s *{{.Tag}}Service) {{.Name}}({{range .Args -}}{{.Name}} {{.Type}},{{end -
         {{else if eq .RequestBody.MediaType "application/x-www-form-urlencoded"}}
             // Encode the request body as a form.
             form := url.Values{}
-            err := encoder.Encode(person, form)
+            encoder := schema.NewEncoder()
+            err := encoder.Encode(body, form)
             if err != nil {
 		        return {{if .Response}}nil,{{end}} fmt.Errorf("encoding form body request failed: %v", err)
             }
             b := strings.NewReader(form.Encode())
+        {{else if eq .RequestBody.Type "string"}}
+            b := strings.NewReader(body)
         {{else}}
             b := &body
         {{end}}
@@ -64,13 +67,13 @@ func (s *{{.Tag}}Service) {{.Name}}({{range .Args -}}{{.Name}} {{.Type}},{{end -
         if resp.Body == nil {
             return nil, errors.New("request returned an empty body in the response")
         }
-        var body {{.Response.Type}}
-        if err := json.NewDecoder(resp.Body).Decode(&body); err != nil {
+        var decoded {{.Response.Type}}
+        if err := json.NewDecoder(resp.Body).Decode(&decoded); err != nil {
             return nil, fmt.Errorf("error decoding response body: %v", err)
         }
 
         // Return the response.
-	    return &body, nil
+	    return &decoded, nil
     {{else}}
 	    // Return.
 	    return nil
