--- a/cmd/tmpl/client-example.tmpl
+++ b/cmd/tmpl/client-example.tmpl
@@ -6,12 +6,12 @@ func ExampleNewClient() {
     }
 
     // Call the client's methods.
-    resp, err := client.Meta.Ping()
+    result, err := client.Meta.Ping()
     if err != nil {
         panic(err)
     }
 
-    fmt.Println(resp)
+    fmt.Println(result)
 }
 
 // - OR -
@@ -25,10 +25,10 @@ func ExampleNewClientFromEnv() {
     }
 
     // Call the client's methods.
-    resp, err := client.Meta.Ping()
+    result, err := client.Meta.Ping()
     if err != nil {
         panic(err)
     }
 
-    fmt.Println(resp)
+    fmt.Printf("%#v", result)
 }
