--- a/cmd/tmpl/function-example.tmpl
+++ b/cmd/tmpl/function-example.tmpl
@@ -1,5 +1,5 @@
 // Create a client with your token.
-func Example{{.Tag}}{{.Name}}() {
+func Example{{.Tag}}Service_{{.Name}}() {
     client, err := {{.PackageName}}.NewClientFromEnv("your apps user agent")
     if err != nil {
         panic(err)
