--- a/cmd/tmpl/lib.tmpl
+++ b/cmd/tmpl/lib.tmpl
@@ -153,7 +153,7 @@ func checkResponse(res *http.Response) error {
 		return nil
 	}
 
-	slurp, err := ioutil.ReadAll(res.Body)
+	slurp, err := io.ReadAll(res.Body)
 	if err == nil {
 		var jerr Error
 
