--- a/cmd/tmpl/function-example.tmpl
+++ b/cmd/tmpl/function-example.tmpl
@@ -1,4 +1,4 @@
-// Create a client with your token.
+// {{.Description}}
 func Example{{.Tag}}Service_{{.Name}}() {
     client, err := {{.PackageName}}.NewClientFromEnv("your apps user agent")
     if err != nil {
