--- a/cmd/tmpl/examples.tmpl
+++ b/cmd/tmpl/examples.tmpl
@@ -4,6 +4,7 @@ package {{.PackageName}}_test
 
 import (
     "github.com/kittycad/kittycad.go"
+	"github.com/gorilla/websocket"
 )
 
 {{range .Examples -}}
