--- a/cmd/tmpl/websocket.tmpl
+++ b/cmd/tmpl/websocket.tmpl
@@ -2,12 +2,12 @@
 func (s *{{.Tag}}Service) {{.Name}}({{range .Args -}}{{.Name}} {{.Type}},{{end -}}{{if .RequestBody}}body {{.RequestBody.Type}}{{end}}) (*websocket.Conn, error) {
 	// Create the url.
     path := "{{.Path}}"
-	uri := resolveRelative(s.client.server, path)
+	targetURL := resolveRelative(s.client.server, path)
 
     headers := http.Header{}
 	headers["Authorization"] = []string{fmt.Sprintf("Bearer %s", s.client.token)}
 
-    conn, _, err := websocket.DefaultDialer.Dial(strings.ReplaceAll(uri, "https://", "wss://"), headers)
+    conn, _, err := websocket.DefaultDialer.Dial(strings.ReplaceAll(targetURL, "https://", "wss://"), headers)
 	if err != nil {
         return nil, err
 	}
